Adjust TextView timerCountdown location

--- a/app/src/main/res/layout/activity_open_shutter.xml
+++ b/app/src/main/res/layout/activity_open_shutter.xml
@@ -20,15 +20,18 @@
     </androidx.camera.view.PreviewView>
 
     <TextView
-        android:id="@+id/delayTimerCountdown"
+        android:id="@+id/timerCountdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
