Added bubbleslider and logic to input smilepercent

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,6 +31,12 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.SayCheesePictureTaker.SeekBars" parent="Theme.SayCheesePictureTaker">
+        <item name="colorSecondary">@color/purple_200</item>
+        <item name="colorSecondaryVariant">@color/purple_500</item>
+        <item name="colorOnSecondary">@color/white</item>
+    </style>
+
 
 
 </resources>
