--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="16dp"
         android:max="8"
         android:progress="1"
+        android:theme="@style/Theme.SayCheesePictureTaker.SeekBars"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/delayTextView"
@@ -28,6 +29,7 @@
         android:max="20"
         android:progress="10"
         android:min="5"
+        android:theme="@style/Theme.SayCheesePictureTaker.SeekBars"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/exposureTextView"
         app:layout_constraintTop_toBottomOf="@+id/exposureTextView" />
@@ -129,18 +131,6 @@
         app:layout_constraintStart_toStartOf="@+id/exposureSeekBar"
         app:layout_constraintTop_toBottomOf="@+id/exposureSeekBar" />
 
-    <me.angrybyte.circularslider.CircularSlider
-        android:id="@+id/circular"
-        android:layout_width="0dp"
-        android:layout_height="195dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:padding="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/smileConfidenceTextView" />
-
     <TextView
         android:id="@+id/smileConfidenceTextView"
         android:layout_width="wrap_content"
@@ -149,5 +139,21 @@
         android:text="smileConfidenceTextView"
         app:layout_constraintStart_toStartOf="@+id/cameraTextView"
         app:layout_constraintTop_toBottomOf="@+id/camera_button_group" />
+
+    <com.ramotion.fluidslider.FluidSlider
+        android:id="@+id/smileFluidSlider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:elevation="2dp"
+        app:bar_color="@color/purple_200"
+        app:bar_text_color="#000000"
+        app:duration="@android:integer/config_mediumAnimTime"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/smileConfidenceTextView"
+        app:layout_constraintTop_toBottomOf="@+id/smileConfidenceTextView"
+        app:size="normal"
+        app:text_size="16sp"
+        tools:targetApi="lollipop" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
