--- a/app/src/main/res/layout/activity_smile_overlay.xml
+++ b/app/src/main/res/layout/activity_smile_overlay.xml
@@ -28,4 +28,29 @@
         app:layout_constraintStart_toStartOf="@+id/overlayViewFinder"
         app:layout_constraintTop_toTopOf="@+id/overlayViewFinder" />
 
+    <ImageButton
+        android:id="@+id/back_button2"
+        android:layout_width="@dimen/round_button_medium"
+        android:layout_height="@dimen/round_button_medium"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/ic_roundedbuttons"
+        android:contentDescription="@string/back_button_alt"
+        android:padding="@dimen/spacing_large"
+        android:scaleType="fitCenter"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back" />
+
+    <Button
+        android:id="@+id/setSmilePercentageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="Set this smile as the minimum smile detected"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
