--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -156,4 +156,16 @@
         app:text_size="16sp"
         tools:targetApi="lollipop" />
 
+    <Button
+        android:id="@+id/smileOverlayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Check out your smile in realtime"
+        app:layout_constraintBottom_toTopOf="@+id/openShutterButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/smileFluidSlider" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
