--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,6 @@
         android:layout_marginEnd="16dp"
         android:max="8"
         android:progress="1"
-        android:theme="@style/Theme.SayCheesePictureTaker.SeekBars"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/delayTextView"
@@ -27,9 +26,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:max="20"
-        android:progress="10"
         android:min="5"
-        android:theme="@style/Theme.SayCheesePictureTaker.SeekBars"
+        android:progress="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/exposureTextView"
         app:layout_constraintTop_toBottomOf="@+id/exposureTextView" />
@@ -41,6 +39,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/delay_timer"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,19 +51,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/exposure_timer"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintStart_toStartOf="@+id/delaySeekBar"
         app:layout_constraintTop_toBottomOf="@+id/delaySeekBar" />
 
     <Button
         android:id="@+id/openShutterButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="122dp"
         android:layout_marginEnd="16dp"
         android:text="@string/go_go_gadget_camera"
+        android:theme="@style/Theme.SayCheesePictureTaker.BrightButtons"
         app:layout_constraintBottom_toBottomOf="@+id/photo_view_button"
         app:layout_constraintEnd_toStartOf="@+id/photo_view_button"
         app:layout_constraintStart_toStartOf="@+id/smileConfidenceTextView"
-        app:layout_constraintTop_toTopOf="@+id/photo_view_button" />
+        app:layout_constraintTop_toBottomOf="@+id/smileFluidSlider" />
 
     <ImageButton
         android:id="@+id/photo_view_button"
@@ -121,13 +123,13 @@
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
-
     <TextView
         android:id="@+id/cameraTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="cameraTextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintStart_toStartOf="@+id/exposureSeekBar"
         app:layout_constraintTop_toBottomOf="@+id/exposureSeekBar" />
 
@@ -137,6 +139,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="smileConfidenceTextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintStart_toStartOf="@+id/cameraTextView"
         app:layout_constraintTop_toBottomOf="@+id/camera_button_group" />
 
@@ -146,7 +149,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:elevation="2dp"
-        app:bar_color="@color/purple_200"
+        app:bar_color="@color/colorPrimary"
         app:bar_text_color="#000000"
         app:duration="@android:integer/config_mediumAnimTime"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,9 +163,8 @@
         android:id="@+id/smileOverlayButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:text="Check out your smile in realtime"
+        android:theme="@style/Theme.SayCheesePictureTaker.RegularButtons"
         app:layout_constraintBottom_toTopOf="@+id/openShutterButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
