--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#219EBC</color>
+    <color name="colorPrimaryDark">#023047</color>
+    <color name="colorAccent">#FFB703</color>
     <color name="icActive">#000000</color>
     <color name="icFocused">#DD424141</color>
     <color name="icPressed">#AACCC8C8</color>
+
+
 </resources>
