--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,11 @@
     <!-- Base application theme. -->
     <style name="Theme.SayCheesePictureTaker" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/colorPrimary</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -30,13 +30,11 @@
     <style name="Theme.SayCheesePictureTaker.AlertDialogCustom" parent="Theme.MaterialComponents.Dialog.Alert">
         <item name="android:windowNoTitle">true</item>
     </style>
-
-    <style name="Theme.SayCheesePictureTaker.SeekBars" parent="Theme.SayCheesePictureTaker">
-        <item name="colorSecondary">@color/purple_200</item>
-        <item name="colorSecondaryVariant">@color/purple_500</item>
-        <item name="colorOnSecondary">@color/white</item>
+    <style name="Theme.SayCheesePictureTaker.BrightButtons" parent="Theme.SayCheesePictureTaker">
+        <item name="colorPrimary">@color/colorAccent</item>
+        <item name="colorOnPrimary">@color/black</item>
     </style>
-
-
-
+    <style name="Theme.SayCheesePictureTaker.RegularButtons" parent="Theme.SayCheesePictureTaker">
+        <item name="colorOnPrimary">@color/black</item>
+    </style>
 </resources>
