--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="yabomonkey.example.saycheesepicturetaker.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_about_me"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_about_me"
+        app:showAsAction="always" />
 </menu>
