--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -167,12 +167,12 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:text="@string/smile_overlay_button_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:theme="@style/Theme.SayCheesePictureTaker.DarkButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/smileFluidSlider"
-        tools:text="@string/smile_overlay_button_text" />
+        app:layout_constraintTop_toBottomOf="@+id/smileFluidSlider" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
